Fix "x" button not showing bug

--- a/webpages/css/styles.css
+++ b/webpages/css/styles.css
@@ -234,6 +234,7 @@ h1 {
     border-radius:12px;
     width:320px;
     max-width:90%;
+    position: relative;
     text-align:center;
     box-shadow:0 8px 20px rgba(0,0,0,0.15);
     font-family:'Roboto', sans-serif;
@@ -268,6 +269,7 @@ h1 {
     border: none;
     font-size: 1.5rem;
     line-height: 1;
+    z-index: 1;
     cursor: pointer;
 }
 
